@@ -1,5 +1,6 @@
 lib/Acme/MetaSyntactic/Themes/Abigail.pm
 lib/Acme/MetaSyntactic/beatles.pm
+lib/Acme/MetaSyntactic/charlies_angels.pm
 lib/Acme/MetaSyntactic/michelin.pm
 lib/Acme/MetaSyntactic/sodor.pm
 Makefile.PL
