@@ -1,3 +1,7 @@
+Version 2012052101 Mon May 21 01:29:06 CEST 2012
++ List requirements in Makefile.PL
++ Theme: charlies_angels
+
 Version 2012051701 Thu May 17 23:34:39 CEST 2012
 + First release
 + Themes: beatles, michelin, sodor.
